tests/lean/389.lean.expected.out
389.lean:7:14-7:17: error: Application type mismatch: In the appplication
  getFoo bar
the final argument
  bar
has type
  Bar Nat : Type
but is expected to have type
  Foo ?m : Type
getFoo bar.toFoo : Nat
